* changes v3.20 -> v3.21:

##
## Features
##

- New option --progress-only: Quickly provides ideal progress step size and time to process on the user hashes and selected options, then quit
- Files: Use $HEX[...] in case the password includes the separater character, increases potfile reading performance

##
## Algorithms
##

- Added hash-mode 1300 = SHA-224

##
## Bugs
##

- Fixed infinite loop when using --loopback in case all hashes have been cracked
- Fixed double fclose() using AMDGPU-Pro on sysfs compatible platform: Leading to segfault
- Fixed kernel loops in --increment mode leading to slower performance
- Fixed custom char parsing code in maskfiles in --increment mode: Custom charset wasn't used
- Fixed hex output of plaintext in case --outfile-format 4, 5, 6 or 7 was used
- Fixed mask length check in hybrid attack-modes: Do not include hash-mode dependant mask length checks
- Removed access to readlink() on FreeBSD: Causes problem building hashcat

##
## Technical
##

- Sanity: Added sanity check to disallow --speed-only in combination with -i
- Potfile: In v3.10 already, the default potfile suffix changed but the note about was missing. The "hashcat.pot" became "hashcat.potfile"
- Threads: Replaced all calls to strerror() with %m printf() GNU extension to ensure thread safety
- Threads: Replaced all calls to ctime() with ctime_r() to ensure thread safety
- OpenCL Runtime: Updated AMDGPU-Pro driver version check, do warn if version 16.50 is detected which is known to be broken

* changes v3.10 -> v3.20:

The hashcat core was completely refactored to be a MT-safe library (libhashcat).
The goal was to help developers include hashcat into distributed clients or GUI frontends.
The CLI (hashcat.bin or hashcat.exe) works as before but from a technical perspective it's a library frontend.

##
## Features
##

- New option --speed-only: Quickly provides cracking speed per device based on the user hashes and selected options, then quit